<resources>
    <string name="app_name">CarBap</string>
    <string name="searchbar_hint">주소를 입력해주세요</string>
    <string name="menu_description">메뉴 버튼</string>
    <string name="camera_description">카메라 버튼</string>
    <string name="btn_show_charger_list">내 위치 근처 충전소</string>
    <string name="current_location_description">현재 위치 버튼</string>
    <string name="my_point">포인트 내역 확인</string>
    <string name="register_charger">카밥 등록</string>
    <string name="my_reservation">예약 내역 확인</string>
    <string name="my_charger_list">내 카밥 리스트</string>
    <string name="softeer_nickname">소프티어님</string>
    <string name="account_description">계정 아이콘</string>
    <string name="logout">로그아웃</string>
    <string name="nearby_chargers">내 위치 근처 충전소</string>
    <string name="order_by_price">저렴한 순</string>
    <string name="order_by_speed">속도 순</string>
    <string name="charger_title_example">주차하기 좋아요!</string>
    <string name="charger_location_example">울산광역시 북구 염포동 394-4</string>
    <string name="charger_price_example">220원/kwh</string>
    <string name="charger_charge_speed_example">충전속도 7kwh</string>
    <string name="charger_location_description">카밥 위치 아이콘</string>
    <string name="charger_speed_description">카밥 충전속도</string>
    <string name="app_icon_description">카밥 아이콘</string>
    <string name="email">이메일</string>
    <string name="password">패스워드</string>
    <string name="confirm_password">패스워드 확인</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="next">다음</string>
    <string name="nickname">닉네임</string>
    <string name="email_duplicate_confirm">이메일 중복 확인</string>
    <string name="nickname_duplicate_confirm">닉네임 중복 확인</string>
    <string name="complete_signup">완료</string>
    <string name="arrow_back_description">뒤로 가기 버튼</string>
    <string name="cancel_icon_description">취소 버성</string>
    <string name="register_charger_onboarding_title">내 카밥을 다른 사람에게\n유로로 공유할 수 있어요!</string>
    <string name="register_charger_onboarding_body">카밥은 개인(비공용) 전기차 충전기를 의미해요</string>
    <string name="register_charger_onboarding_img">카밥 충전 온보딩 이미지</string>
    <string name="register_charger_step_one">1번 단계</string>
    <string name="register_charger_step_two">2번 단계</string>
    <string name="register_charger_step_three">3번 단계</string>
    <string name="register_charger_step_one_description">내 카밥이 공유\n가능한지 확인해요</string>
    <string name="register_charger_step_two_description">내 카밥 정보를\n입력해요</string>
    <string name="register_charger_step_three_description">고정 사용 시간을\n입력해요</string>
    <string name="btn_register_charger_onboarding">카밥 공유하러 가기</string>
    <string name="register_condition_check_title">내 카밥이 공유 조건을\n만족하는지 확인해주세요</string>
    <string name="condition_check_first">외부인이 주차 가능한 곳인가요?</string>
    <string name="first_condition_no">아니요</string>
    <string name="first_condition_yes">네</string>
    <string name="error_icon">조건 불만족 아이콘</string>
    <string name="first_condition_hint">외부인이 주차가 가능해야 등록이 가능해요</string>
    <string name="condition_check_second">보유한 충전기가 개인(비개방형) 소유의\n전기차 충전기인가요?</string>
    <string name="register_location_title">내 카밥의 위치를\n알려주세요</string>
    <string name="register_location_searchbar_hint">지번, 도로명, 건물명으로 검색</string>
    <string name="set_current_location">현재 위치로 설정</string>
    <string name="check_charger_location">위치 확인</string>
    <string name="register_detail_title">내 카밥 정보를\n입력해주세요</string>
    <string name="charger_nickname_hint">입력해 주세요 (30자 이내)</string>
    <string name="charger_location_type">충전 장소</string>
    <string name="house">단독 주택</string>
    <string name="villa">빌라</string>
    <string name="apartment">아파트</string>
    <string name="location_etc">기타</string>
    <string name="charger_adapter_type">충전기 타입</string>
    <string name="slow_speed">완속</string>
    <string name="adater_ac">AC 3상</string>
    <string name="destination">데스티네이션</string>
    <string name="adapter_etc">기타</string>
    <string name="charger_speed">충전 속도</string>
    <string name="speed_3kwh">3kWh</string>
    <string name="speed_5kwh">5kWh</string>
    <string name="speed_7kwh">7kWh</string>
    <string name="speed_11kwh">11kWh</string>
    <string name="charger_install_type">설치 형태</string>
    <string name="outside">실외</string>
    <string name="inside">실내</string>
    <string name="canopy">캐노피</string>
    <string name="charger_install_type_etc">기타</string>
    <string name="register_price_title">충전 대여 요금을\n책정해주세요</string>
    <string name="price_icon_description">가격 책정 아이콘</string>
    <string name="percent_kwh">1kWh 당</string>
    <string name="won">원</string>
    <string name="input_price_hint">입력하기</string>
    <string name="percent_hour">시간 당</string>
    <string name="register_description_title">카밥 빌리미를 위해\n더 자세한 정보를 입력해요</string>
    <string name="register_description_body">모두에게 공개되는 정보가 아닌,\n빌리미가 결제 이후에 확인하는 정보예요</string>
    <string name="register_description_subbody">카드 키 위치, 카드 전달 방법, 당부 메세지 등을 남겨\n빌리미에게 정보를 전달해요</string>
    <string name="required">필수</string>
    <string name="register_description_subtitle">내 카밥 이용 방법 작성</string>
    <string name="description_input_hint">입력하세요 (500자 이내)</string>
    <string name="charger_image_upload">사진 등록</string>
    <string name="optional">선택</string>
    <string name="register_time_title">내 카밥 이용 불가 시간을\n설정해 주세요!</string>
    <string name="register_time_body">내가 이용하는 시간 대를 설정하면 그 시간 대에는 구매자가\n이용할 수 없어요. 설정한 시간은 한달동안 유지되며, 수정\n이 필요한 경우 수정페이지를 이용해주세요.</string>
    <string name="icon_register_time_description">공유 시간 등록 아이콘</string>
    <string name="complete_register">완료하기</string>
    <string name="register_time_description">이 시간에는 구매자가 사용할 수 없어요</string>
    <string name="start_time">시작 시간</string>
    <string name="end_time">종료 시간</string>
    <string name="register_time_hint">선택해주세요</string>
    <string name="register_time_divider">-</string>
    <string name="register_complete_title">성공적으로 \n업로드 되었어요!</string>
    <string name="register_complete_body"><![CDATA[업로드 된 내 카밥은 처음 지도 화면> 메뉴버튼>\n내 충전기 확인하기에서 언제든지 수정할 수 있어요]]></string>
    <string name="register_complete_icon_description">최종 등록 확인 아이콘</string>
    <string name="back_to_home">처음 화면으로</string>
    <string name="upload_title">이대로 업로드 할까요?</string>
    <string name="charger_location_title">카밥 위치</string>
    <string name="charger_price">대여 가격</string>
    <string name="charger_detail_title">카밥 상세 정보</string>
    <string name="charger_type_title">카밥 타입</string>
    <string name="charger_speed_title">카밥 속도</string>
    <string name="charger_install_type_title">설치 형태</string>
    <string name="charger_upload_image_title">소개 사진</string>
    <string name="cancel">취소</string>
    <string name="upload">업로드</string>
    <string name="disabled_time_title">예약 불가능 시간</string>
    <string name="charger_nickname_title">카밥 닉네임</string>
    <string name="current_filter">등록순</string>
    <string name="filter_icon_description">필터 아이콘</string>
    <string name="confirm_reservation">예약 확인</string>
    <string name="detail_description">상세 설명</string>
    <string name="charger_image_description">등록한 충전소 사진</string>
    <string name="more_icon_description">더보기 아이콘</string>
    <string name="calendar_icon_description">캘린더 아이콘</string>
    <string name="qr_code_description">QR코드</string>
    <string name="price_per_hour_title">시간당 대여 가격</string>
    <string name="my_charger_detail_title">카밥 상세 정보</string>
    <string name="my_charger_speed_title">카밥 속도</string>
    <string name="use_description_title">이용 방법</string>
    <string name="total_income">총 소득</string>
    <string name="confirm_reservation_body">김현대님이 카밥 대여 요청을 보냈어요!</string>
    <string name="reservation_date">대여 날짜 : 2024.02.12</string>
    <string name="reservation_time">대여 시간 : 15:00 - 17:00</string>
    <string name="reservation_price">대여 비용 : 3,400원</string>
    <string name="reject_reservation">거절</string>
    <string name="approve_reservation">승인</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="delete_dialog_body">삭제할 경우 다시 되돌릴 수 없습니다.</string>
    <string name="delete_dialog_title">삭제하시겠습니까?</string>
    <string name="confirm_delete">확인</string>
    <string name="my_charger_detail_edit">수정 완료</string>
    <string name="icon_edit_description">수정 아이콘</string>
    <string name="point_charge_description">포인트 충전</string>
    <string name="point_charge_title">포인트 내역</string>
    <string name="total_points">총 포인트</string>
    <string name="empty_point_charge">포인트 내역이 없어요.</string>
    <string name="apply_time_title">충전을 원하는 \n시간대를 선택해주세요</string>
    <string name="previous_date_icon_description">이전 날짜 아이콘</string>
    <string name="apply_reservation">예약 신청하기</string>
    <string name="reservation_possible">예약 가능</string>
    <string name="reservation_possible_icon_description">예약 가능 아이콘</string>
    <string name="reservation_impossible">예약 불가능</string>
    <string name="apply_time_body">예약 불가 시간대를 피해서 선택해 주세요!</string>
    <string name="apply_complete_title">카밥 예약 신청이 완료되었어요\n예약 확정까지 기다려 주세요!</string>
    <string name="apply_complete_image_description">신청 완료 이미지</string>
    <string name="apply_complete_body">예약 확정 여부는 예약 내역에서 확인할 수 있어요</string>
    <string name="apply_confirm_title">카밥 주인에게 \n예약 신청을 보낼까요?</string>
    <string name="apply_confirm_time_title">예약 시간</string>
    <string name="apply_confirm_back">뒤로 가기</string>
    <string name="apply_confirm_apply">신청</string>
    <string name="reservation_list_check">예약내역 확인</string>
    <string name="reservation_wait">대기</string>
    <string name="reservation_approve">승인</string>
    <string name="reservation_reject">거절</string>
    <string name="empty_reservation_list">카밥 예약 내역이 없어요</string>
    <string name="drawer_nickname">%1$s님</string>
    <string name="alert_dialog_title">이미지 업로드를 위해 권한 설정이 필요합니다.</string>
    <string name="time_string_format">%1$s:00</string>
    <string name="price_format">%1$s원/kwh</string>
    <string name="empty_own_charger_list">등록된 카밥이 없어요ㅠ</string>
    <string name="empty_charger_reservation_list">들어온 예약이 없어요ㅠ</string>
    <string name="apply_confirm_time">%1$s:00 - %2$s:00</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_payment_success">결제 성공 아이콘</string>
    <string name="reservation_time_title">예약 시간</string>
    <string name="success_charger_location_title">충전기 위치</string>
    <string name="expected_charge_title">예상 충전량</string>
    <string name="rental_price_title">대여 금액</string>
    <string name="icon_carbap_pay_description">카밥 페이 아이콘</string>
    <string name="success_payment_title">결제를 완료했어요</string>
    <string name="fail_payment_title">결제를 실패하였습니다</string>
    <string name="icon_payment_fail_description">결제 실패 아이콘\n</string>
    <string name="fail_payment_description">잔액이 부족합니다</string>
    <string name="payment_confirm_title">결제하시겠습니까?</string>
    <string name="remain_point_title">카밥 페이 남은 잔액</string>
</resources>